--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -2,29 +2,69 @@
     xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
+    android:viewportWidth="54"
+    android:viewportHeight="54">
+  <group android:scaleX="0.605"
+      android:scaleY="0.605"
+      android:translateX="10.665"
+      android:translateY="10.665">
+    <path
+        android:pathData="M0.09,0.011h54.439v54.439h-54.439z"
+        android:strokeWidth="0.561"
+        android:fillColor="#9bffc6"
+        android:strokeColor="#00000000"/>
+    <path
+        android:pathData="M43.692,22.385 L25.983,51.228 4.501,38.311 21.93,10.027 40.418,4.791Z"
+        android:strokeWidth="0.565"
+        android:fillColor="#ffffff">
+      <aapt:attr name="android:strokeColor">
+        <gradient 
+            android:startX="7.608"
+            android:startY="22.398"
+            android:endX="42.341"
+            android:endY="29.987"
+            android:type="linear">
+          <item android:offset="0.913" android:color="#FF909090"/>
+          <item android:offset="1" android:color="#00909090"/>
+        </gradient>
+      </aapt:attr>
     </path>
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M46.445,20.402 L35.299,52.36 11.555,44.326 22.547,12.974 39.491,3.912Z"
+        android:strokeWidth="0.565"
+        android:fillColor="#ffffff">
+      <aapt:attr name="android:strokeColor">
+        <gradient 
+            android:startX="11.194"
+            android:startY="28.117"
+            android:endX="46.747"
+            android:endY="28.117"
+            android:type="linear">
+          <item android:offset="0.913" android:color="#FF909090"/>
+          <item android:offset="1" android:color="#00909090"/>
+        </gradient>
+      </aapt:attr>
+    </path>
+    <path
+        android:pathData="m37.401,17.045a3.294,2.695 0,0 1,-4.001 1.928,3.294 2.695,0 0,1 -2.383,-3.261 3.294,2.695 0,0 1,3.971 -1.971,3.294 2.695,0 0,1 2.434,3.236"
+        android:strokeWidth="1.163"
+        android:fillColor="#9bffc6">
+      <aapt:attr name="android:strokeColor">
+        <gradient 
+            android:startX="30.44"
+            android:startY="16.362"
+            android:endX="37.99"
+            android:endY="16.362"
+            android:type="linear">
+          <item android:offset="0" android:color="#FF909090"/>
+          <item android:offset="1" android:color="#00909090"/>
+        </gradient>
+      </aapt:attr>
+    </path>
+    <path
+        android:pathData="m17.839,3.121a14.846,11.888 0,0 1,12.444 4.099,14.846 11.888,0 0,1 3.197,10.466"
+        android:strokeWidth="1.416"
+        android:fillColor="#00000000"
+        android:strokeColor="#970000"/>
+  </group>
 </vector>
